Bug 491180.  <button> should not clip overflowing contents.  r=roc